--- a/public/404.html
+++ b/public/404.html
@@ -13,9 +13,9 @@
 <title>404 Page not found | LCS CODES</title>
 <link rel="manifest" href="/manifest.json">
 <link rel="icon" href="/favicon.png" type="image/x-icon">
-<link rel="stylesheet" href="/book.min.46181bc93375ba932026e753b37c40e6ff8bb16a9ef770c78bcc663e4577b1ba.css" integrity="sha256-RhgbyTN1upMgJudTs3xA5v&#43;LsWqe93DHi8xmPkV3sbo=" crossorigin="anonymous">
+<link rel="stylesheet" href="/book.min.e62c87c0a5f78618c1d9654bac000b57fdba292e359cd3ae3a97d4774328868d.css" integrity="sha256-5iyHwKX3hhjB2WVLrAALV/26KS41nNOuOpfUd0Moho0=" crossorigin="anonymous">
   <script defer src="/flexsearch.min.js"></script>
-  <script defer src="/en.search.min.543b50db93b3a697fdc72e8affc68c4e45f84ef68bf110f4d16074852a59bbee.js" integrity="sha256-VDtQ25Ozppf9xy6K/8aMTkX4TvaL8RD00WB0hSpZu&#43;4=" crossorigin="anonymous"></script>
+  <script defer src="/en.search.min.347155818f5836f4ce76e87d46bee56d7ad7b2207ac967206c4c67e4eee06477.js" integrity="sha256-NHFVgY9YNvTOduh9Rr7lbXrXsiB6yWcgbExn5O7gZHc=" crossorigin="anonymous"></script>
 <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
