--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@ THIS IS PERSONAL DOCUMENTATION OF ME...  ">
 <link rel="icon" href="/favicon.png" type="image/x-icon">
 <link rel="stylesheet" href="/book.min.e62c87c0a5f78618c1d9654bac000b57fdba292e359cd3ae3a97d4774328868d.css" integrity="sha256-5iyHwKX3hhjB2WVLrAALV/26KS41nNOuOpfUd0Moho0=" crossorigin="anonymous">
   <script defer src="/flexsearch.min.js"></script>
-  <script defer src="/en.search.min.d59b26b6543a29be34302be7a67896554e7da533ff7e14da141b572bb0527d0b.js" integrity="sha256-1ZsmtlQ6Kb40MCvnpniWVU59pTP/fhTaFBtXK7BSfQs=" crossorigin="anonymous"></script>
+  <script defer src="/en.search.min.72be7a6970f9db7194f137d36fafacbcde6bcfa7f045467aeaaf567ec44cc883.js" integrity="sha256-cr56aXD523GU8TfTb6&#43;svN5rz6fwRUZ66q9WfsRMyIM=" crossorigin="anonymous"></script>
 <link rel="alternate" type="application/rss+xml" href="https://lcscodes.github.io/index.xml" title="LCS CODES" />
 <!--
 Made with Book Theme
