--- a/public/404.html
+++ b/public/404.html
@@ -15,7 +15,7 @@
 <link rel="icon" href="/favicon.png" type="image/x-icon">
 <link rel="stylesheet" href="/book.min.e62c87c0a5f78618c1d9654bac000b57fdba292e359cd3ae3a97d4774328868d.css" integrity="sha256-5iyHwKX3hhjB2WVLrAALV/26KS41nNOuOpfUd0Moho0=" crossorigin="anonymous">
   <script defer src="/flexsearch.min.js"></script>
-  <script defer src="/en.search.min.72be7a6970f9db7194f137d36fafacbcde6bcfa7f045467aeaaf567ec44cc883.js" integrity="sha256-cr56aXD523GU8TfTb6&#43;svN5rz6fwRUZ66q9WfsRMyIM=" crossorigin="anonymous"></script>
+  <script defer src="/en.search.min.68b7b269bbf297e29f38bbdcae319eb51c2f85681d37122358752af180f40b1e.js" integrity="sha256-aLeyabvyl&#43;KfOLvcrjGetRwvhWgdNxIjWHUq8YD0Cx4=" crossorigin="anonymous"></script>
 <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
